# pyflows

./: .gitignore  README.md  flake.nix  mypy.ini  pyflows.service  pyproject.toml
docs/superpowers/plans/: 2026-06-09-concurrency-control.md
integrations/unmanic/: README.md  config.example.yaml  info.json  plugin.py
nix/: devshell.nix  formatter.nix  package.nix
nix/devshells/: fileflows.nix
nix/modules/nixos/: pyflows.nix
pyflows/: __init__.py  __main__.py  audio.py  config.py  constants.py  db.py  ffmpeg.py  hooks.py  logging_utils.py  metrics.py  notify.py  pipeline.py  plan.py  probe.py  scanner.py  subtitles.py  tasks.py  webhook.py
pyflows/ui/: __init__.py  handlers.py
pyflows/ui/static/: styles.css
pyflows/ui/templates/: base.html  dashboard.html  file_detail.html  history.html  libraries.html  queue.html  settings.html
pyflows/ui/templates/partials/: encode_progress.html  failed_table.html  file_detail_card.html  history_table.html  pause_controls.html  queue_preview.html  queue_table.html  recent_completions.html  status_bar.html
tests/: conftest.py  test_audio.py  test_config.py  test_db.py  test_ffmpeg.py  test_logging_utils.py  test_notify.py  test_pipeline.py  test_plan.py  test_probe.py  test_scanner.py  test_subtitles.py  test_tasks.py  test_webhook.py
