[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflows"
version = "0.1.0"
description = "Media library transcoder with VAAPI hardware encoding"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "huey>=2.5",
    "watchdog>=4.0",
    "rich>=13.0",
    "prometheus-client>=0.20",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pyflows = "pyflows.__main__:main"

[tool.setuptools.package-data]
pyflows = ["ui/templates/*.html", "ui/templates/partials/*.html", "ui/static/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyflows*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
